force-app/main/default/objects/Medical_Facility_Opening_Hour__c/Medical_Facility_Opening_Hour__c.object-meta.xml
<CustomObject>
    <label>Medical Facility Opening Hour</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Opening Hour Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Facility Opening Hours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>