force-app/main/default/objects/Medical_Facility_Opening_Hour__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <label>Day</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poniedziałek</fullName>
            </value>
            <value>
                <fullName>Wtorek</fullName>
            </value>
            <value>
                <fullName>Środa</fullName>
            </value>
            <value>
                <fullName>Czwartek</fullName>
            </value>
            <value>
                <fullName>Piątek</fullName>
            </value>
            <value>
                <fullName>Sobota</fullName>
            </value>
            <value>
                <fullName>Niedziela</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>