force-app/main/default/objects/Medical_Facility_Opening_Hour__c/fields/Medical_Facility__c.field-meta.xml
<CustomField>
    <fullName>Medical_Facility__c</fullName>
    <label>Medical Facility</label>
    <referenceTo>Medical_Facility__c</referenceTo>
    <relationshipName>Medical_Facility_Opening_Hours</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>