force-app/main/default/objects/Medical_Facility_Opening_Hour__c/fields/Opening_Hour__c.field-meta.xml
<CustomField>
    <fullName>Opening_Hour__c</fullName>
    <label>Opening Hour</label>
    <length>100</length>
    <type>Text</type>
</CustomField>